--- a/main.css
+++ b/main.css
@@ -566,12 +566,12 @@ transform: rotate(45deg) translate(-7px, -6px);
     }
     .cardContainer h1{
         margin: 20px auto; 
-        font: 2.5rem "Dancing Script";
+        font: 3rem "Dancing Script";
     }
 
     .cardContainer p{
         width: 90%;
-        font-size: .5rem;
+        font-size: 1rem;
         text-align: center;
     }
     footer{
