--- a/main.css
+++ b/main.css
@@ -179,9 +179,11 @@ nav h1{
     color: #ffffff;
     background-color: #ff9b9b;
 }
+
 .header h4{
+    font-size: 1.2rem;
     display: block;
-    margin: 0 auto;
+    margin: 10px auto;
 }
 .new{
     position: relative;
@@ -202,6 +204,17 @@ nav h1{
    
 
 }
+
+
+
+.new p{
+    padding: 10px 10px;
+    text-align: center;
+    color: white;
+    background-color:#ff9b9b ;
+    font-size: 1rem;
+}
+
 
 a .cheesecake{
     display: none;
@@ -226,14 +239,6 @@ a .cheesecake{
 	z-index: 7;
 }
 
-
-
-.new p{
-    padding: 10px 10px;
-    text-align: center;
-    color: white;
-    background-color:#ff9b9b ;
-}
 
 /*!!!!!!!!!!!!! CONTENT 3 !!!!!!!!!!!!!!*/
 .container3{
@@ -543,6 +548,12 @@ transform: rotate(45deg) translate(-7px, -6px);
         width: 100%;
         height: 20vh;
     }
+
+    .new p{
+        background-color:#ff9b9b ;
+        font-size: .5rem;
+    }
+
     a .cheesecake{
         display: none;
         position: absolute;
