--- a/cart.css
+++ b/cart.css
@@ -401,7 +401,7 @@ transform: rotate(45deg) translate(-7px, -6px);
     }
     .nav-link a h4{
         width: 50vw;
-        font-size: .5rem;
+        font-size: 1rem;
         transition: all .5s ease
     }
     .nav-active {
@@ -439,7 +439,7 @@ transform: rotate(45deg) translate(-7px, -6px);
         display: block;
         margin: 0 auto;
         width: 20vh;
-      
+        font-size: .5rem;
     }
     .active{
         width: 100%;
