--- a/main.css
+++ b/main.css
@@ -584,7 +584,7 @@ transform: rotate(45deg) translate(-7px, -6px);
 
     .cardContainer p{
         width: 90%;
-        font-size: 17px;
+        font-size: .8rem;
         text-align: center;
     }
     footer{
