--- a/main.css
+++ b/main.css
@@ -285,7 +285,7 @@ a .cheesecake{
 
 .cardContainer p{
     width: 800px;
-    font-size: .5rem;
+    font-size: 1rem;
     margin: 25px auto;
     padding-bottom: 20px;
 }
