--- a/cart.css
+++ b/cart.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 body{
@@ -14,6 +15,7 @@ body{
 }
 ::-webkit-scrollbar{
     display: none;
+    
 }
 
 /*!!!!!!!HEADER NAVIGATIONS!!!!!!!!!!!*/
@@ -69,15 +71,15 @@ nav h1{
     align-items: center;
 }
 .nav-link li:last-child{
-    margin-right: 20px;
+    margin-right: 30px;
 }
-.nav-link a{
+.nav-link a, .nav-link div{
     color: white;
     text-decoration: none;
     
 }
 
-.nav-link a h4{
+.nav-link a h4, .nav-link div h4{
     width: 50vw;
     font-size: 1.3rem;
     transition: all .5s ease
@@ -151,6 +153,7 @@ button:focus{
     width: 50vw;
     height: 100%;
     text-align: center;
+    margin-left: 30px;
 }
 .arrow{
     
