--- a/main.css
+++ b/main.css
@@ -5,15 +5,21 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body{
     font-family: "Poppins";
     overflow-y: scroll;
     overflow-x: hidden;
+    
 }
 ::-webkit-scrollbar{
     display: none;
+  
+}
+.body{
+    position: relative;
 }
 
 /*!!!!!!!HEADER NAVIGATIONS!!!!!!!!!!!*/
@@ -40,7 +46,7 @@ body{
     position: relative;
     top: 0px;
     transition: all 1s ease;
-    z-index: 100;
+    z-index: 2;
   }
 nav{
     position: fixed;
@@ -91,6 +97,7 @@ nav h1{
 
   
 /*!!!!!!!!!CONTENT!!!!!!!!!*/
+
 .mySlides {
     margin:0 auto;
     display: none;
@@ -295,11 +302,12 @@ a .cheesecake{
 footer{
     background-color: plum;
     position: absolute;
-    bottom: -750px;
+    bottom: -100vh;
     width: 100%;
     height: 30vh;
     display: block;
     text-align: center;
+    z-index: 99999;
 }
 
 footer h1{
@@ -318,6 +326,12 @@ footer button{
     color: white;
     background-color: rgb(255, 66, 170);
     cursor: pointer;
+    outline: 0;
+    transition: all .3s ease;
+}
+
+footer button:active{
+    transform: scale(0.9);
 }
 
 footer p{
@@ -325,14 +339,25 @@ footer p{
     margin-top: 30px;
 }
 
-
 footer p a{
     color: white;
     text-decoration: none;
 }
 
-
-
+.scrollup{
+    position: absolute;
+    right: 2vw;
+    bottom: 0vh;
+    font-size: 60px;
+    color: plum;
+    z-index: 1;
+    opacity: 0;
+    transition: all .5s ease;
+    cursor: pointer;
+}
+.scrollup:active{
+    transform: scale(.9);
+}
 
 
 /* ALL Hover EFFECTS */
@@ -355,6 +380,104 @@ a:hover .cheesecake{
     opacity: 1;
     display: block;
     animation-play-state: running;
+}
+
+/* Contact Us */
+.contactus{
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 65vh;
+    top: 0vh;
+    left: 0;
+    margin: 0 auto;
+    background-color: rgb(243, 197, 243);
+    z-index: 3;
+    color: white;
+    transform: translateY(-100%);
+    transition: all .5s ease;
+}
+
+.card{
+    display: inline-block;
+    margin: 0 auto;
+    width: 100%;
+    height: 15vh;
+    background-color: plum;
+}
+
+.card h1{
+    font: 1.9rem "Poppins";
+    margin-top: 20px;
+    margin-left: 10vw;
+}
+.card p{
+    font: 1rem "Poppins";
+    margin-left: 10vw;
+}
+.card i{
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    cursor: pointer;
+    transition: all .5s ease;
+}
+.card i:active{
+    transform: scale(.8);
+    transform: rotate(105deg);
+    opacity: .5;
+}
+
+.contactus form{
+    display: block;
+    width: 80%;
+    margin: 10px auto;
+}
+.contactus form h3{
+    margin-bottom: 10px;
+}
+.contactus form input{
+    width: 100%;
+    height: 3vh;
+    margin-bottom: 5px;
+    border-style: none;
+    border-radius: 5px;
+    outline: 0;
+}
+
+
+textarea{
+    width: 100%;
+    font: 1rem "Poppins" ;
+    resize: none;
+    border-style: none;
+    outline: 0;
+}
+
+
+.contactus form input[type="button"]{
+    width: 10%;
+    height: 5vh;
+    margin-top: 20px;
+    float: right;
+    font: 1rem "Poppins";
+    color: white;
+    background-color: plum;
+    transition: all .5s ease;
+    cursor: pointer;
+}
+input[type="button"]:active{
+    transform: scale(.8);
+}
+.contactactive{
+    position: fixed;
+    transform: translateY(0);
+    transition: all .5s ease;
+}
+.contactactive1{
+    position: fixed;
+    transform: translateY(-100%);
+    transition: all .5s ease;
 }
 
 
@@ -481,6 +604,9 @@ transform: rotate(45deg) translate(-7px, -6px);
         display: inline-block;
         transition: background-color 0.6s ease;
       }
+      .contactus form input[type="button"]{
+        width: 30%;
+    }
 
     nav{
         position: relative;
@@ -626,7 +752,11 @@ transform: rotate(45deg) translate(-7px, -6px);
         color: white;
         text-decoration: none;
     }
-
+    .scrollup{
+        position: absolute;
+        bottom: -70vh;
+        opacity: 0;
+    }
 
 
     
