--- a/cart.css
+++ b/cart.css
@@ -71,7 +71,7 @@ nav h1{
     align-items: center;
 }
 .nav-link li:last-child{
-    margin-right: 30px;
+    margin-right: 20px;
 }
 .nav-link a, .nav-link div{
     color: white;
@@ -106,7 +106,7 @@ nav h1{
     text-align: center;
     width: 30vh;
     background-color: plum;
-    height: 9vh;
+    height: 8vh;
     text-transform: uppercase;
     transition: all .7s ease;
 }
@@ -385,9 +385,9 @@ transform: rotate(45deg) translate(-7px, -6px);
        
         position: absolute;
         display: block;
-        top: 60px;
+        top: 50px;
         width: 100%;
-        height: 26vh;
+        height: 35vh;
         background-color: plum;
         z-index: 1;
         transform: translateX(100%);
@@ -411,17 +411,18 @@ transform: rotate(45deg) translate(-7px, -6px);
     .nav-active {
         background-color:  plum;
         transform: translateX(0%);
-        overflow-y: scroll;
+        overflow-y: hidden;
     }
     .select{
         width: 100%;
+        margin: 0;
+       
     }
 
     .menu{
         display: flex;
         width: 100vw;
-        margin-bottom: 100vh;
-        
+        overflow-y: hidden;
     }
 
     .menu p{
@@ -434,9 +435,10 @@ transform: rotate(45deg) translate(-7px, -6px);
         position: absolute;
         display: block;
         margin: 0 auto;
-        top: 10vh;   
+        top: 5vh;   
         width: 100%;
         z-index: 99;
+        overflow-y: hidden;
     }
 
     .dropdown a{
@@ -444,10 +446,11 @@ transform: rotate(45deg) translate(-7px, -6px);
     }
 
     .dropdown a p{
-        display: block;
+        display: flex;
         margin: 0 auto;
         width: 20vh;
         font-size: 0.4rem;
+        text-align: center;
     }
     .active{
         width: 100%;
@@ -458,12 +461,17 @@ transform: rotate(45deg) translate(-7px, -6px);
 
     .card{
         display: block;
+        
+    }
+    .card img{
+        height: 25vh;
     }
 
     .cake{
         width: 100%;
         height: 30vh;
         margin: 0 auto;
+        overflow-y: hidden;
     }
     .cake img{
         width:90%;
@@ -502,7 +510,7 @@ transform: rotate(45deg) translate(-7px, -6px);
         font-size: .5rem;
     }
     .load{
-        height: 70vh;
+        height: 85vh;
     }
     .loads{
         margin-bottom: 50vh;
