--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
 }
 
 body{
@@ -64,18 +65,26 @@ nav h1{
 }
 .nav-link{
     display: flex;
-    width: 20%;
+    width: 30%;
     justify-content: space-around;
 }
 .nav-link li{
+    color: white;
     list-style: none;
+    /* margin-right: 10px; */
+    letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+.nav-link li div{
+    cursor: pointer;
 }
 .nav-link a{
     color: white;
     text-decoration: none;
     letter-spacing: 3px;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 1.5rem;
     width: 20%;
 }
 
@@ -208,8 +217,7 @@ nav h1{
     height: 100%;
     margin: 0 auto;
     object-fit: cover;
-   
-
+    
 }
 
 
@@ -226,24 +234,24 @@ nav h1{
 a .cheesecake{
     display: none;
     position: absolute;
-    top: 37px;
+    top: 10vh;
     left: 0;
     animation: showMe 2s ease infinite 0.2s forwards;
     animation-play-state: paused;
-    z-index: 99;
+    z-index: -2;
 }
 
  .cheesecake:nth-child(1){
     animation-delay: 0.3s;
-	z-index: 9;
+	z-index: -2;
 }
  .cheesecake:nth-child(2){
 	animation-delay: .6s;
-	z-index: 8;
+	z-index: -1;
 }
  .cheesecake:nth-child(3){
 	animation-delay: .9s;
-	z-index: 7;
+	z-index: 1;
 }
 
 
@@ -388,13 +396,13 @@ a:hover .cheesecake{
     display: block;
     width: 100%;
     height: 65vh;
-    top: 0vh;
+    top: 0;
     left: 0;
     margin: 0 auto;
     background-color: rgb(243, 197, 243);
     z-index: 3;
     color: white;
-    transform: translateY(-100%);
+    transform: translateY(-150%);
     transition: all .5s ease;
 }
 
@@ -497,12 +505,12 @@ input[type="button"]:active{
     0% { 
 
         visibility: visible; 
-        z-index: 100; 
+        z-index: 1; 
     }
 	12.5% { 
       
         visibility: visible; 
-        z-index: 100; 
+        z-index: 1; 
     }
 	25% {
        
@@ -621,14 +629,14 @@ transform: rotate(45deg) translate(-7px, -6px);
     .nav-link{
         display: flex;
         position: absolute;
-        right: -400px;
-        top: 8vh;
+        top: 7vh;
         align-items: center;
         width: 100%;
         flex-direction: column;
         height: 40vh;
         background: plum;
         z-index: 99999999;
+        transform: translateX(100%);
     }
     .nav-link li{
         height: 5vh;
@@ -636,7 +644,11 @@ transform: rotate(45deg) translate(-7px, -6px);
 
     .active{
         transition: all 0.5s ease-in;
-        right: 0;
+        transform: translateX(0);
+    }
+    .active1{
+        transition: all 0.5s ease-in;
+        transform: translateX(150%);
     }
     .container2{
         width: 100%;
@@ -756,8 +768,5 @@ transform: rotate(45deg) translate(-7px, -6px);
         position: absolute;
         bottom: -70vh;
         opacity: 0;
-    }
-
-
-    
+    } 
 }
